# portfolio-web

./: package-lock.json  render.yaml  vercel.json
.github/workflows/: deploy.yml  refresh_kb.yml
api/: index.py  requirements.txt
backend/: build_knowledge_base.py  docker-compose.yml  main.py  pom.xml  pyproject.toml  requirements.txt
backend/data/: knowledge_base.json  query_log.jsonl
backend/data/json_files/: github_profile.json
backend/data/text_files/: github_profile.txt
backend/scrapers/: github_scraper.py  leetcode_scraper.py  resume_scraper.py
backend/src/main/java/com/example/portfolio_backend/config/: CorsConfig.java
backend/src/main/java/com/example/portfolio_backend/controller/: ActivityController.java  RefreshController.java
backend/src/main/java/com/example/portfolio_backend/dto/: ActivityDayDTO.java  ActivityResponseDTO.java
backend/src/main/java/com/example/portfolio_backend/model/: DailyActivity.java
backend/src/main/java/com/example/portfolio_backend/repository/: DailyActivityRepository.java
backend/src/main/java/com/example/portfolio_backend/service/: ActivityIngestService.java  ActivityService.java  GitHubService.java  LeetCodeService.java
backend/src/main/resources/: application.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
src/components/: About.tsx  AnimatedBackground.tsx  Certifications.tsx  Hero.tsx  InteractiveElement.tsx  Journal.tsx  Navigation.tsx  Resume.tsx  Skills.tsx
src/data/: portfolioData.ts
src/hooks/: use-scroll-reveal.tsx
(+25 files in other folders)
